added changes to week 1 day 1

--- a/Week1-Day1/06-Stu_HTML/Unsolved/index.html
+++ b/Week1-Day1/06-Stu_HTML/Unsolved/index.html
@@ -1,14 +1,76 @@
 <!DOCTYPE html>
 <html lang="en-US">
-
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Student Bio</title>
   </head>
+  <style>
+    .student {
+      height: 150px;
+      weight: 150px;
+      border-style: solid;
+      border-color: rgb(5, 118, 149);
+    }
 
+    .h2 {
+      font-family: "Courier New", Courier, monospace;
+      font-style: italic;
+      color: rgb(159, 134, 192);
+    }
+
+    .About {
+      border-style: solid;
+      border-color: rgb(191, 133, 165);
+      background-color: rgb(255, 200, 221);
+      color: black;
+      position: relative;
+      text-align: center;
+      font-size: 18px;
+      font-family: 'Courier New', Courier, monospace;
+    }
+
+    .title {
+      font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+      border-style: solid;
+      border-width: 3px;
+      position:relative; margin-right: 60%;
+      border-color: rgb(94, 84, 142);
+      font-size: 30px;
+      background-color: rgb(205, 180, 219)
+  
+    }
+
+    .p1 {
+      font-family: 'Courier New', Courier, monospace;
+      font-size: small;
+      
+    }
+
+    .a {
+      font-family: 'Courier New', Courier, monospace;
+    }
+  </style>
   <body>
     <!-- TODO: Write Your Code Below-->
+    <h1 div class="title">Student Bio</h1 div >
+    <h2 class="h2">Ayan Ahmed</h2>
+    <img
+      src="https://ugc.futurelearn.com/uploads/images/4d/c9/header_4dc9321b-f608-4196-9fb7-02f6c0029a5f.jpg"
+      class="student"
+    />
+    <br />
+    <br />
+    <div class="About Me">About Me</div>
+    <br>
+    <br>
+    <p1 class="p1"><fieldset>Hi! My name is Ayan, I am 25 years old. Prior to this course, I was a qualified Secondary English teacher. I qualified about 2 years. I chose this course not only for an opportunity of a career change but seek more challenges, enhance my knowledge of technology and learning in general!</fieldset></p1>
+    <br>
+    <h2>Contact Info</h2>
+    <ul class="a">
+      <li>Email: ayan.h18@hotmail.com</li>
+      <li>Github: ayaneey</li>
+      <li>Portfolio: coming soon</li>
+    </ul>
 
   </body>
-
 </html>
