added changes to Week 2 Day 3

--- a/Week2-Day 2/16-Stu_HTML-display/Unsolved/index.html
+++ b/Week2-Day 2/16-Stu_HTML-display/Unsolved/index.html
@@ -5,23 +5,27 @@
     <title>HTML Display</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
-  <style></style>
+  <style>
+ 
+
+  </style>
   <body>
     <header>
       <h2>HTML Display</h2>
       <nav>
-        <div ul>
+        <div   ul>
           <li class="li1" id="item-1">LIST ITEM 1</li>
           <li class="li2" id="item-2">LIST ITEM 2</li>
           <li id="item-3">LIST ITEM 3</li>
         </ul>
       </nav>
     </header>
+    <br>
 
     <section>
-      <img src="./assets/images/image-1.png" alt="box with number 1" />
-      <img src="./assets/images/image-2.png" alt="box with number 2" />
-      <img
+      <img 1 src="./assets/images/image-1.png" alt="box with number 1" />
+      <img 2 src="./assets/images/image-2.png" alt="box with number 2" />
+      <img 3
         id="image-3"
         src="./assets/images/image-3.png"
         alt="box with number 3"
